Finish draft of flat field notebooks

--- a/notebooks/05.03-Calibrating-the-flats.ipynb
+++ b/notebooks/05.03-Calibrating-the-flats.ipynb
@@ -622,9 +622,7 @@
     "for ccd, file_name in ifc_raw.ccds(imagetyp='FLAT',            # Just get the bias frames\n",
     "                                   return_fname=True           # Provide the file name too.\n",
     "                                  ):\n",
-    "    \n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
+    "        \n",
     "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
     "    \n",
@@ -636,7 +634,7 @@
     "                             exposure_time='exptime', exposure_unit=u.second, scale=True)\n",
     "\n",
     "    # Save the result\n",
-    "    ccd.write(reduced_path / save_name)"
+    "    ccd.write(reduced_path / file_name)"
    ]
   }
  ],
