--- a/notebooks/05.04-Combining-flats.ipynb
+++ b/notebooks/05.04-Combining-flats.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Example 1\n",
     "\n",
-    "We begin by setting up an image collection for the reduced data."
+    "We begin by setting up an image collection for the reduced data. This data is from chip 0 of the cryogenically-cooled Large Format Camera at Palomar Observatory."
    ]
   },
   {
@@ -47,6 +47,8 @@
    "outputs": [],
    "source": [
     "calibrated_path = Path('example1-reduced')\n",
+    "\n",
+    "flat_imagetyp = 'flatfield'\n",
     "\n",
     "ifc = ccdp.ImageFileCollection(calibrated_path)"
    ]
@@ -64,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat_filters = set(h['filter'] for h in ifc.headers(imagetyp='flatfield'))\n",
+    "flat_filters = set(h['filter'] for h in ifc.headers(imagetyp=flat_imagetyp))\n",
     "flat_filters"
    ]
   },
@@ -81,8 +83,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "median_count = [np.median(data) for data in ifc.data(imagetyp='flatfield')]\n",
-    "mean_count = [np.mean(data) for data in ifc.data(imagetyp='flatfield')]\n",
+    "median_count = [np.median(data) for data in ifc.data(imagetyp=flat_imagetyp)]\n",
+    "mean_count = [np.mean(data) for data in ifc.data(imagetyp=flat_imagetyp)]\n",
     "plt.plot(median_count, label='median')\n",
     "plt.plot(mean_count, label='mean')\n",
     "plt.xlabel('Image number')\n",
@@ -127,7 +129,7 @@
    "outputs": [],
    "source": [
     "for filt in flat_filters:\n",
-    "    to_combine = ifc.files_filtered(imagetyp='flatfield', filter=filt, include_path=True)\n",
+    "    to_combine = ifc.files_filtered(imagetyp=flat_imagetyp, filter=filt, include_path=True)\n",
     "    combined_flat = ccdp.combine(to_combine,\n",
     "                                 method='average', scale=inv_median,\n",
     "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
@@ -141,46 +143,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "show_image(combined_flat, cmap='gray')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "to_combine = ifc.files_filtered(imagetyp='flatfield', filter=filt,\n",
-    "                                include_path=True)\n",
-    "bad_combined_flat = ccdp.combine(to_combine,\n",
-    "                             method='average',\n",
-    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                             mem_limit=350e6\n",
-    "                            )\n",
-    "\n",
-    "bad_combined_flat.meta['combined'] = True\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "show_image(bad_combined_flat, cmap='gray')"
+    "### Discussion of Example 1"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 2"
+    "We will begin by checking that the right number of combined flats have been created. There were two filters, `g'` and `i'` in the raw data so there should be two combined flats. We need to refresh the `ImageFileCollection` for the reduced data because new files, our flats, have been added to them."
    ]
   },
   {
@@ -188,7 +161,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ifc.refresh()\n",
+    "ifc.files_filtered(imagetyp=flat_imagetyp, combined=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That looks good. Two two flats are displayed below."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(nrows=1, ncols=2, figsize=(10, 20), tight_layout=True)\n",
+    "\n",
+    "for ccd, axis in zip(ifc.ccds(imagetyp=flat_imagetyp, combined=True), axes):\n",
+    "    show_image(ccd.data, cmap='gray', fig=fig, ax=axis)\n",
+    "    title = \"Filter {}\".format(ccd.header['filter'])\n",
+    "    axis.set_title(title)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first thing to notice is that the flats are different in these two filters. That is expected because one of the elements in the optical path, the filter, is different.\n",
+    "\n",
+    "The pattern of electronics in the flat images is because this is a backside-illuminated CCD. The light-detecting pixels are on the under side of the chip and the light needs to pass through the chip to reach the sensor. The small dark spots are places where the chip wasn't thinned uniformly.\n",
+    "\n",
+    "Compare this with [Example 2](#Discussion-of-Example-2) below, which shows a flat taken with a front-side illuminated camera."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 2\n",
+    "\n",
+    "The data in this example is from a thermo-electrically cooled Andor Aspen CG16M. These flats are twilight flats, taken just after sunset."
+   ]
   },
   {
    "cell_type": "code",
@@ -197,6 +214,8 @@
    "outputs": [],
    "source": [
     "calibrated_path = Path('example2-reduced')\n",
+    "\n",
+    "flat_imagetyp = 'flat'\n",
     "\n",
     "ifc = ccdp.ImageFileCollection(calibrated_path)"
    ]
@@ -207,8 +226,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flat_filters = set(h['filter'] for h in ifc.headers(imagetyp='flat'))\n",
+    "flat_filters = set(h['filter'] for h in ifc.headers(imagetyp=flat_imagetyp))\n",
     "flat_filters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Twilight flats typically differ more from frame-to-frame than dome flats, as shown in the figure below."
    ]
   },
   {
@@ -217,8 +243,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "median_count = [np.median(data) for data in ifc.data(imagetyp='flat')]\n",
-    "mean_count = [np.mean(data) for data in ifc.data(imagetyp='flat')]\n",
+    "median_count = [np.median(hdu.data) for hdu in ifc.hdus(imagetyp=flat_imagetyp)]\n",
+    "mean_count = [np.mean(data) for data in ifc.data(imagetyp=flat_imagetyp)]\n",
     "plt.plot(median_count, label='median')\n",
     "plt.plot(mean_count, label='mean')\n",
     "plt.xlabel('Image number')\n",
@@ -238,7 +264,7 @@
     "    return 1 / np.median(a)\n",
     "\n",
     "for filt in flat_filters:\n",
-    "    to_combine = ifc.files_filtered(imagetyp='flat', filter=filt, include_path=True)\n",
+    "    to_combine = ifc.files_filtered(imagetyp=flat_imagetyp, filter=filt, include_path=True)\n",
     "    combined_flat = ccdp.combine(to_combine,\n",
     "                                 method='average', scale=inv_median,\n",
     "                                 sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
@@ -252,12 +278,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "show_image(combined_flat, cmap='gray')"
+    "### Discussion of Example 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We expect only one combined flat because there was only one filter. The `ImageFileCollection` is refreshed before we query it because the combined flats were added after the collection was created."
    ]
   },
   {
@@ -266,33 +297,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "to_combine = ifc.files_filtered(imagetyp='flat', filter=filt,\n",
-    "                                include_path=True)\n",
-    "bad_combined_flat = ccdp.combine(to_combine,\n",
-    "                             method='average',\n",
-    "                             sigma_clip=True, sigma_clip_low_thresh=5, sigma_clip_high_thresh=5,\n",
-    "                             sigma_clip_func=np.ma.median, signma_clip_dev_func=mad_std,\n",
-    "                             mem_limit=350e6\n",
-    "                            )\n",
-    "\n",
-    "bad_combined_flat.meta['combined'] = True"
+    "ifc.refresh()\n",
+    "ifc.files_filtered(imagetyp=flat_imagetyp, combined=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The combined flat is displayed below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [],
    "source": [
-    "show_image(bad_combined_flat, cmap='gray')"
+    "show_image(combined_flat, cmap='gray', figsize=(10, 20))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "This flat looks very different than the one in [Example 1](#Discussion-of-Example-1) because this CCD is front-side illuminated and the previous one is back-side illuminated. That means the sensor is on the top of the chip and the light does not pass through the sensor chip itself to reach the sensors. Though only one filter is shown here, the flat field looks slightly different through other filters on this camera."
+   ]
   }
  ],
  "metadata": {
