Minor cleanup of early notebooks

--- a/notebooks/02.01-Calibrating-bias-images.ipynb
+++ b/notebooks/02.01-Calibrating-bias-images.ipynb
@@ -469,14 +469,12 @@
    "source": [
     "for ccd, file_name in files.ccds(imagetyp='BIAS',            # Just get the bias frames\n",
     "                                 return_fname=True           # Provide the file name too.\n",
-    "                                ):\n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
+    "                                ):    \n",
     "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
     "    \n",
     "    # Save the result\n",
-    "    ccd.write(calibrated_data / save_name)"
+    "    ccd.write(calibrated_data / file_name)"
    ]
   },
   {
