--- a/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
+++ b/notebooks/02.04-Combine-bias-images-to-make-master.ipynb
@@ -32,9 +32,7 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "\n",
-    "from convenience_functions import show_image\n",
-    "\n",
-    "#download_base_url = 'http://physics.mnstate.edu/craig/ccd-guide/'"
+    "from convenience_functions import show_image"
    ]
   },
   {
@@ -189,7 +187,7 @@
    "source": [
     "### Result\n",
     "\n",
-    "The difference between a single calibrated bias image and the combined bias image is miuch clearer in this case."
+    "The difference between a single calibrated bias image and the combined bias image is much clearer in this case."
    ]
   },
   {
