--- a/notebooks/03.05-Calibrate-dark-images.ipynb
+++ b/notebooks/03.05-Calibrate-dark-images.ipynb
@@ -244,16 +244,14 @@
     "for ccd, file_name in ex2_images_raw.ccds(imagetyp='DARK',            # Just get the bias frames\n",
     "                                          return_fname=True           # Provide the file name too.\n",
     "                                         ):\n",
-    "    \n",
-    "    save_name, _ = file_name.split('.gz')\n",
-    "    \n",
+    "        \n",
     "    # Trim the overscan\n",
     "    ccd = ccdp.trim_image(ccd[:, :4096])\n",
     "    \n",
     "    # Subtract bias\n",
     "    ccd = ccdp.subtract_bias(ccd, combined_bias)\n",
     "    # Save the result\n",
-    "    ccd.write(ex2_path_reduced / save_name)"
+    "    ccd.write(ex2_path_reduced / file_name)"
    ]
   }
  ],
